test/unittest/error/tst.DTRACEFLT_BADADDR.r
The arguments are 1 1 1 0
The value of arg4 should be 1
The value of arg5 should be 0

-- @@stderr --
dtrace: error in dt_clause_1 for probe ID 1 (dtrace:::BEGIN): invalid address ({ptr}) at BPF pc NNN
